fix vertical align on some browsers

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
   background-color: black;
   font-family: 'aileronthin', sans-serif;
   color: white;
+  height: 100vh;
 }
 
 h1 {
